place assigning
