# app/Http/Requests/Api/Employees/EmployeeApiDeletePlaceRequest.php
@@ -1,0 +1,31 @@
+<?php
+
+namespace App\Http\Requests\Api\Employees;
+
+use App\Http\APIRequest;
+
+class EmployeeApiDeletePlaceRequest extends APIRequest
+{
+
+    use RuleTrait;
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'id' => $this->getIdRules(),
+            'place_id' => $this->getPlaceRules(),
+        ];
+    }
+
+    protected function prepareForValidation()
+    {
+        $this->merge([
+            'id' => $this->route('id'),
+        ]);
+    }
+}
